--- a/index.html
+++ b/index.html
@@ -14,8 +14,33 @@
     <link rel="stylesheet" href="./styles/animations.css" />
   </head>
   <body class="page">
-    <header class="header"></header>
-    <main></main>
+    <header class="header">
+      <h1 class="header__title">&lt;/HTML&gt;</h1>
+      <p class="header__subtitle">закрывающий тег</p>
+    </header>
+    <main class="content">
+      <ul class="content__cards-list">
+        <li class="content__cards-list-item">
+          <h2 class="card__title">
+            Фритрек и нулевой спринт: Подготовка к работе
+          </h2>
+          <img
+            loading="lazy"
+            class="card__image"
+            src="./images/card_image.png"
+            alt="8-битное изображение пейзажа ночного кэмпинга в доме на колесах у костра на фоне луны"
+          />
+          <span aria-hidden="true" class="card__label">&lt;/HTML&gt;</span>
+          <div class="card__paragraph-wrapper">
+            <p class="card__paragraph">
+              Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.
+            </p>
+            <p class="card__paragraph">
+              Место для ваших воспоминаний о начале обучения.
+            </p>
+        </li>
+      </ul>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
