--- a/index.html
+++ b/index.html
@@ -555,8 +555,6 @@
             fill="transparent"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 40 40"
-            width="39"
-            height="39"
           >
             <use
               class="dialog-content-svg"
@@ -564,7 +562,7 @@
             ></use>
           </svg>
 
-          <p class="dialog-content-text">Вставьте дискету, чтобы продолжить</p>
+          <p class="dialog-content-text">Вставьте дискету,&nbsp;чтобы продолжить</p>
         </div>
 
         <button
