feat: добавлены 7 фильтров на img

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="card_image-wrapper">
               <img
                 loading="lazy"
-                class="card__image"
+                class="card__image filter-blur"
                 src="./images/card_image.png"
                 alt="8-битное изображение пейзажа ночного кэмпинга в доме на колесах у костра на фоне луны"
               />
@@ -91,7 +91,7 @@
             <div class="card_image-wrapper">
               <img
                 loading="lazy"
-                class="card__image"
+                class="card__image filter-grayscale"
                 src="./images/card_image.png"
                 alt="8-битное изображение пейзажа ночного кэмпинга в доме на колесах у костра на фоне луны"
               />
@@ -156,7 +156,7 @@
             <div class="card_image-wrapper">
               <img
                 loading="lazy"
-                class="card__image"
+                class="card__image filter-hue-rotate"
                 src="./images/card_image.png"
                 alt="8-битное изображение пейзажа ночного кэмпинга в доме на колесах у костра на фоне луны"
               />
@@ -218,7 +218,7 @@
             <div class="card_image-wrapper">
               <img
                 loading="lazy"
-                class="card__image"
+                class="card__image filter-invert"
                 src="./images/card_image.png"
                 alt="8-битное изображение пейзажа ночного кэмпинга в доме на колесах у костра на фоне луны"
               />
@@ -282,7 +282,7 @@
             <div class="card_image-wrapper">
               <img
                 loading="lazy"
-                class="card__image"
+                class="card__image filter-opacity"
                 src="./images/card_image.png"
                 alt="8-битное изображение пейзажа ночного кэмпинга в доме на колесах у костра на фоне луны"
               />
@@ -347,7 +347,7 @@
             <div class="card_image-wrapper">
               <img
                 loading="lazy"
-                class="card__image"
+                class="card__image filter-sepia"
                 src="./images/card_image.png"
                 alt="8-битное изображение пейзажа ночного кэмпинга в доме на колесах у костра на фоне луны"
               />
@@ -409,7 +409,7 @@
             <div class="card_image-wrapper">
               <img
                 loading="lazy"
-                class="card__image"
+                class="card__image filter-saturate-contrast"
                 src="./images/card_image.png"
                 alt="8-битное изображение пейзажа ночного кэмпинга в доме на колесах у костра на фоне луны"
               />
