feat: рабочий прототип, исправлено исчезновение дискеты

--- a/index.html
+++ b/index.html
@@ -542,8 +542,13 @@
         class="save-button button"
       >
         <span class="button__text save-button__content">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
-            <use class="save-button-svg" href="./svg/floppy.svg#floppy"></use>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 40 40"
+          ><use
+              class="save-button-svg"
+              href="./svg/floppy.svg#floppy"
+            ></use>
           </svg>
           Сохранить на память
         </span>
@@ -555,6 +560,8 @@
             fill="transparent"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 40 40"
+            width="39"
+            height="39"
           >
             <use
               class="dialog-content-svg"
@@ -562,7 +569,9 @@
             ></use>
           </svg>
 
-          <p class="dialog-content-text">Вставьте дискету,&nbsp;чтобы продолжить</p>
+          <p class="dialog-content-text">
+            Вставьте дискету,&nbsp;чтобы продолжить
+          </p>
         </div>
 
         <button
