--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     viewBox="0 0 39 36"
                     fill="transparent"
                     xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
                   >
                     <g class="heart">
                       <path
@@ -118,6 +119,7 @@
                     viewBox="0 0 39 36"
                     fill="transparent"
                     xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
                   >
                     <g class="heart">
                       <path
@@ -180,6 +182,7 @@
                     viewBox="0 0 39 36"
                     fill="transparent"
                     xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
                   >
                     <g class="heart">
                       <path
@@ -244,6 +247,7 @@
                     viewBox="0 0 39 36"
                     fill="transparent"
                     xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
                   >
                     <g class="heart">
                       <path
@@ -309,6 +313,7 @@
                     viewBox="0 0 39 36"
                     fill="transparent"
                     xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
                   >
                     <g class="heart">
                       <path
@@ -371,6 +376,7 @@
                     viewBox="0 0 39 36"
                     fill="transparent"
                     xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
                   >
                     <g class="heart">
                       <path
@@ -435,6 +441,7 @@
                     viewBox="0 0 39 36"
                     fill="transparent"
                     xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
                   >
                     <g class="heart">
                       <path
@@ -482,7 +489,7 @@
             <div class="card__paragraph-wrapper">
               <p class="card__paragraph">
                 Сейчас вы уже очень много знаете о вёрстке. Но это только
-                начало.<br />Во-первых, впереди ещё много материала про
+                начало. Во-первых, впереди ещё много материала про
                 «красотищу». Во-вторых, с окончанием курса учёба не
                 заканчивается. Вёрстка — это целый мир. И этот мир постоянно
                 меняется. Познать его полностью не получится, но это тот случай,
@@ -502,6 +509,7 @@
                     viewBox="0 0 39 36"
                     fill="transparent"
                     xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
                   >
                     <g class="heart">
                       <path
